# xadmin_zx

./: .coverage  .coveragerc  .dockerignore  .env  .env.example  .gitignore  Dockerfile  QUICK_START.md  README.md  START_GUIDE.md  TESTING.md  TESTPLAN_YAML_INTEGRATION.md  TESTPLAN_YAML_README.md  YAML_MIGRATION_GUIDE.md  YAML_VALIDATOR_README.md  add_tpdb_menu.sql  add_yaml_menu.sql  check_user_table.py  conftest.py  data.pg.sql  deploy-simple.sh  deploy.sh  docker-compose.simple.yml  docker-compose.yml  init-db.sql  os.pg.sql  product.pg.sql  pyproject.toml  pytest.ini  setup_testplan_yaml.sh  start_xadmin.sh  sync_to_wsl.sh  test-quick.sh  test.sh  test_createsuperuser.sh  test_dept_status_filter.py  test_results.txt  test_superuser_auth.sh  test_system_user_role_display.sh  test_tree_performance.py  (+2 more)
etc/: index.html  tp_gen.css  tp_gen.js
test_plan/: apps.py  models.py  router.py
tests/: .coverage  README.md  __init__.py  run_db_tests.sh  run_route_tests.sh  test_database_connection.py  test_example_api.py  test_route_registration.py  test_routes.py  test_scan_code.py
tpgen/: README.md  ROUTES_README.md  SETUP_TPGEN.md  TPGEN_API_DOCUMENT.md  TPGEN_USAGE_GUIDE.md  api.py  apps.py  models.py  schemas.py  tp_data.sql  urls.py  views.py
web/: .dockerignore  .env  .env.development  Dockerfile  Dockerfile.simple  nginx.conf  nginx.docker.conf  package.json  pnpm-lock.yaml  setup_and_start.sh  start_frontend.sh  vite.config.ts
xadmin/: database_router.py  logru_config.py  settings.py  urls.py
xadmin_auth/: api_auth.py  api_sut_device.py  api_test_plan.py  urls.py  (+2 more)
(+231 files in other folders)
